[package]
name = "symbo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.21", features = ["derive"] }
serde = "1.0.183"
serde_json = "1.0.104"
rzpipe = { path = "rzpipe" }
regex = "1.9.3"
itertools = "0.11.0"
tempfile = "3.7.1"
dynfmt = { version = "0.1.5", features = ["curly"] }
