[package]
name = "symbo2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rzpipe = { path = "rzpipe" }
tempfile = "3.7.1"
dynfmt = { version = "0.1.5", features = ["curly"] }
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.104"
pot = "3.0.0"

[profile.bench]
debug = true
