[package]
name = "symbo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rzpipe = { path = "rzpipe" }
tempfile = "3.7.1"
dynfmt = { version = "0.1.5", features = ["curly"] }
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.104"
pot = "3.0.0"
clap = { version = "4.4.6", features = ["derive"] }
cpp_demangle = "0.4.3"
colored = "2.0.4"
crossterm = { version = "0.27.0", features = ["events"] }

[profile.bench]
debug = true
